--- a/Momentum/index.html
+++ b/Momentum/index.html
@@ -21,10 +21,16 @@
     <div class="hello">
         <h1>Grab me4!</h1>
     </div> -->
-    <div id="login-form">
-      <input type="text" placeholder="What is your name?" />
+    <form id="login-form">
+      <input
+        required
+        maxlength="15"
+        type="text"
+        placeholder="What is your name?"
+      />
       <button>Log In</button>
-    </div>
+    </form>
+    <a href="https://nomadcoders.co">Go to courses</a>
     <script src="app.js"></script>
   </body>
 </html>
